--- a/modules/valuesd/2023-r2-csp1-auth.yaml
+++ b/modules/valuesd/2023-r2-csp1-auth.yaml
@@ -9,19 +9,20 @@ backend_modules:
       memory: '715827883'
     requests:
       memory: '715827883'
-  tag: 2023r2ga
+  tag: 2023r2csp1
   version: 6.4.0
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
   image:
     repository: folioorg/mod-users:19.2.2
   name: mod-users
+  kafkaAccess: true
   resources:
     limits:
       memory: '536870912'
     requests:
       memory: '536870912'
-  tag: 2023r2ga
+  tag: 2023r2csp1
   version: 19.2.2
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
@@ -33,10 +34,10 @@ backend_modules:
       memory: '357913941'
     requests:
       memory: '357913941'
-  tag: 2023r2ga
+  tag: 2023r2csp1
   version: 7.10.1
 - environment:
-    JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Dcache.permissions=true -Dtoken.expiration.seconds=accessToken:3600,refreshToken:604800
+    JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Dcache.permissions=true
   image:
     repository: folioorg/mod-authtoken:2.14.1
   name: mod-authtoken
@@ -46,5 +47,5 @@ backend_modules:
       memory: '357913941'
     requests:
       memory: '357913941'
-  tag: 2023r2ga
+  tag: 2023r2csp1
   version: 2.14.1
