ttl configurable for other Job too

--- a/vufind/templates/vufinddb.init.job.yaml
+++ b/vufind/templates/vufinddb.init.job.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install"
 spec:
+  ttlSecondsAfterFinished: {{ (.Values.job).ttlSecondsAfterFinished | default "300" }}
   template:
     spec:
       imagePullSecrets:
@@ -44,6 +45,5 @@ spec:
           optional: false
       restartPolicy: Never
   backoffLimit: 10
-  ttlSecondsAfterFinished: 3600
 ---
 {{- end }}
