added option to change helm repository destination to upload script/gitlab-ci config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ upload-helm-charts:
     - 'curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3'
     - 'chmod 700 get_helm.sh'
     - './get_helm.sh'
-    - 'cd $CI_PROJECT_DIR/repo_tools && ./upload_to_helm_repo.sh'
+    - 'cd $CI_PROJECT_DIR/repo_tools && ./upload_to_helm_repo.sh $CI_COMMIT_BRANCH'
