--- a/modules/valuesd/2023r2csp2-auth.yaml
+++ b/modules/valuesd/2023r2csp2-auth.yaml
@@ -37,7 +37,7 @@ backend_modules:
   tag: 2023r2csp2
   version: 7.10.1
 - environment:
-    JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Dcache.permissions=true
+    JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Djwt.signing.key=$JWT_SIGNING_KEY  -Dcache.permissions=true
   image:
     repository: folioorg/mod-authtoken:2.14.1
   name: mod-authtoken
@@ -49,3 +49,4 @@ backend_modules:
       memory: '357913941'
   tag: 2023r2csp2
   version: 2.14.1
+  customEnvSecret: true
