--- a/tenant/templates/preset-settings.job.yaml
+++ b/tenant/templates/preset-settings.job.yaml
@@ -10,14 +10,16 @@ metadata:
 spec:
   template:
     spec:
+      {{- with $.Values.imagePullSecrets }}
       imagePullSecrets:
-      - name: {{ $.Values.global.image.pullsecret }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: {{ $.Release.Name }}-preset-values-{{ .tenantId }}
-        {{- with $.Values.global.image }}
+        {{- with $.Values.image }}
         image: {{ .repositoryBaseUrl }}{{ .okapicliRepo }}:{{ .okapicliTag }}
+        imagePullPolicy: {{ .pullPolicy }}
         {{- end }}
-        imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: scripts
           mountPath: "/usr/src/app/kube-scripts"
