--- a/modules/valuesd/2024r1ga-no-auth.yaml
+++ b/modules/valuesd/2024r1ga-no-auth.yaml
@@ -476,6 +476,7 @@ backend_modules:
   image:
     repository: folioorg/mod-entities-links:3.0.1
   kafkaAccess: true
+  s3storageAccess: true
   name: mod-entities-links
   secretEnv:
   - key: SYSTEM_USER_PASSWORD
@@ -559,6 +560,8 @@ backend_modules:
   version: 3.3.5
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    EXPORT_IDS_BATCH: 1000
+    EXPORT_FILES_MAX_POOL_SIZE: 10
   image:
     repository: folioorg/mod-data-export:5.0.4
   name: mod-data-export
