changed image pull secret value location

--- a/zalando-pg/templates/folio.init.job.yaml
+++ b/zalando-pg/templates/folio.init.job.yaml
@@ -4,15 +4,17 @@ kind: Job
 metadata:
   name: {{ .Release.Name }}-folio-init-job
   annotations:
-    "helm.sh/hook": "post-install"
+    "helm.sh/hook": "post-install,post-upgrade"
 spec:
   template:
     spec:
+      {{- with $.Values.imagePullSecrets }}
       imagePullSecrets:
-      - name: {{ $.Values.global.image.pullsecret }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: {{ .Release.Name }}-create-folio-dbs
-        image: {{ $.Values.global.image.repositoryBaseUrl }}folio-tools:{{ $.Values.global.image.folioToolsTag }} 
+        image: {{ $.Values.image.repositoryBaseUrl }}folio-tools:{{ $.Values.image.folioToolsTag }} 
         imagePullPolicy:  "IfNotPresent"
         env:
         - name: PG_HOST
