--- a/zalando-pg/values.yaml
+++ b/zalando-pg/values.yaml
@@ -28,15 +28,15 @@ resources:
     memory: "16Gi"
 
 teamId: "folio"
-numberOfInstances: 3
+numberOfInstances: 2
 
 # postgresql parameters
 parameters:
+parameters:
   listen_addresses: "*"
-  # max_wal_senders: "10"
-  # max_wal_size: 4GB
+  max_wal_senders: "10"
+  max_wal_size: 4GB
   max_connections: "1200"
-  # shared_buffers: "128MB"
   db_user_namespace: "off"
   password_encryption: "md5"
   effective_io_concurrency: "2"
@@ -52,9 +52,6 @@ parameters:
   checkpoint_timeout: "3000"
   effective_cache_size: "24GB"
   maintenance_work_mem: "256MB"
-  max_replication_slots: "0"
-  max_wal_senders: "10"
-  max_wal_size: "10GB"
   max_worker_processes: "12"
   shared_buffers: "16GB"
   temp_buffers: "256MB"
