--- a/secure-supertenant/templates/secure-supertenant.job.yaml
+++ b/secure-supertenant/templates/secure-supertenant.job.yaml
@@ -5,11 +5,13 @@ metadata:
 spec:
   template:
     spec:
+      {{- with $.Values.imagePullSecrets }}
       imagePullSecrets:
-      - name: {{ $.Values.global.image.pullsecret }}
+        {{- toYaml . | nindent 8 }}                                                                                                                                                                                                               
+      {{- end }}
       containers:
       - name: {{ $.Release.Name }}-supertenant
-        {{- with $.Values.global.image }}
+        {{- with $.Values.image }}
         image: {{ .repositoryBaseUrl }}folio-tools:{{ .folioToolsTag }}
         {{- end }}
         imagePullPolicy: Always
