--- a/modules/valuesd/2024r1ga-no-auth.yaml
+++ b/modules/valuesd/2024r1ga-no-auth.yaml
@@ -42,6 +42,7 @@ backend_modules:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Djava.util.logging.config.file=vertx-default-jul-logging.properties
     MAX_REQUEST_SIZE: '80000000'
     test.mode: false
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-source-record-storage:5.8.5
   kafkaAccess: true
@@ -103,6 +104,7 @@ backend_modules:
   version: 4.7.0
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-invoice-storage:5.8.1
   kafkaAccess: true
@@ -154,6 +156,8 @@ backend_modules:
   tag: 2024r1ga
   useHazelcast: true
   version: 4.5.0
+  environment:
+    REPLICATION_FACTOR: "3"
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
   image:
@@ -177,7 +181,7 @@ backend_modules:
   version: 4.0.2
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
-    REPLICATION_FACTOR: 3
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-inventory-storage:27.1.3
   kafkaAccess: true
@@ -205,6 +209,7 @@ backend_modules:
   version: 3.3.1
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-circulation-storage:17.2.1
   kafkaAccess: true
@@ -390,6 +395,7 @@ backend_modules:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0  -Djava.util.logging.config.file=vertx-default-jul-logging.properties
     MAX_REQUEST_SIZE: '80000000'
     test.mode: false
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-source-record-manager:3.8.5
   kafkaAccess: true
@@ -449,6 +455,7 @@ backend_modules:
     data.import.storage.path: /usr/verticles/storage
     data.import.storage.type: LOCAL_STORAGE
     file.processing.buffer.chunk.size: '50'
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-data-import:3.1.1
   kafkaAccess: true
@@ -473,6 +480,7 @@ backend_modules:
 - environment:
     DB_CONNECTION_TIMEOUT: 30000
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-entities-links:3.0.1
   kafkaAccess: true
@@ -486,6 +494,7 @@ backend_modules:
   version: 3.0.1
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0 -Dorg.folio.metadata.inventory.storage.type=okapi
+    REPLICATION_FACTOR: "3"
     inventory.kafka.DataImportConsumerVerticle.instancesNumber: 10
     inventory.kafka.MarcBibInstanceHridSetConsumerVerticle.instancesNumber: 10
     kafka.consumer.max.poll.records: 10
@@ -531,6 +540,7 @@ backend_modules:
   environment:
     INITIAL_LANGUAGES: eng,spa,fre,ger
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-search:3.2.6
   kafkaAccess: true
@@ -584,16 +594,26 @@ backend_modules:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
   image:
     repository: folioorg/mod-lists:2.0.6
+  secretEnv:
+  - key: SYSTEM_USER_PASSWORD
+  s3storageAccess: true
   name: mod-lists
   tag: 2024r1ga
   version: 2.0.6
 - name: mod-serials-management
   environment:
-    JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    JAVA_OPTIONS: -server -XX:+UseContainerSupport -XX:MaxRAMPercentage=55.0 -XX:+PrintFlagsFinal
   image:
     repository: folioorg/mod-serials-management:1.0.3
   tag: 2024r1ga
   version: 1.0.3
+  pod:
+    port: '8080'
+  resources:
+    limits:
+      memory: '1Gi'
+    requests:
+      memory: '1Gi'
 - name: mod-batch-print
   environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
@@ -715,6 +735,7 @@ backend_modules:
   version: 12.8.8
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-data-export-spring:3.2.2
   kafkaAccess: true
@@ -738,6 +759,7 @@ backend_modules:
   version: 2.1.1
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-invoice:5.8.2
   kafkaAccess: true
@@ -775,6 +797,7 @@ backend_modules:
   version: 2.2.0
 - environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-data-export-worker:3.2.4
   kafkaAccess: true
@@ -791,14 +814,19 @@ backend_modules:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
   image:
     repository: folioorg/mod-bulk-operations:2.0.2
+  s3storageAccess: true
   name: mod-bulk-operations
   tag: 2024r1ga
   version: 2.0.2
 - name: mod-dcb
   environment:
     JAVA_OPTIONS: -XX:MaxRAMPercentage=66.0
+    REPLICATION_FACTOR: "3"
   image:
     repository: folioorg/mod-dcb:1.1.0
+  secretEnv:
+  - key: SYSTEM_USER_PASSWORD
+  kafkaAccess: true
   tag: 2024r1ga
   version: 1.1.0
 - environment:
