added ui-oa fix version 2.0.1 to values

--- a/modules/valuesd/2023-r2-csp1-no-auth.yaml
+++ b/modules/valuesd/2023-r2-csp1-no-auth.yaml
@@ -393,9 +393,9 @@ backend_modules:
   name: mod-notes
   resources:
     limits:
-      memory: '357913941'
+      memory: '512m'
     requests:
-      memory: '357913941'
+      memory: '512m'
   tag: 2023r2csp1
   version: 5.1.0
 - environment:
@@ -785,7 +785,7 @@ backend_modules:
   tag: 2023r2ga
   version: 2.0.0
 frontend_modules:
-- folio_oa-2.0.0
+- folio_oa-2.0.1
 - folio_acquisition-units-5.0.0
 - folio_agreements-10.0.1
 - folio_bulk-edit-4.0.2
